updating my portfolio

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>STACEY KOUMARAS</h1>
+        <h1 style="text-align: center;">STACEY KOUMARAS</h1>
 
     </header>
 
