--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CSS Stylesheets with Relative Paths</title>
+    <title>Contact File</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>STACEY KOUMARAS</h1>
+        <h1 style="text-align: center;">STACEY KOUMARAS</h1>
 
     </header>
 
