--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Index file in portfolio</title>
+    <title>Portfolio File</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 
@@ -11,19 +11,22 @@
 
 <body>
     <header>
-        <h1>STACEY KOUMARAS</h1>
 
+        <h1 style="text-align: center;">STACEY KOUMARAS</h1>
     </header>
 
     <div class="container">
 
-        <section id="main-bio">
+        
 
             <h2>Portfolio</h2>
 
             <img id="bio-image" src="https:/placehold.it/200x200" alt="Stacey Koumaras">
 
-            
+            <img id="bio-image" src="https:/placehold.it/200x200" alt="Stacey Koumaras">
+
+            <img id="bio-image" src="https:/placehold.it/200x200" alt="Stacey Koumaras">
+
         </section>
 
 
