--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,8 @@
     <header>
 
         <h1 style="text-align: center;">STACEY KOUMARAS</h1>
+        <a href="index.html">index</a>
+        <a href="contact.html">contact</a>
     </header>
 
     <div class="container">
