--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,8 @@
 <body>
     <header>
         <h1 style="text-align: center;">STACEY KOUMARAS</h1>
+        <a href="portfolio.html">portfolio</a>
+        <a href="index.html">index</a>
 
     </header>
 
