--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <header>
         <h1 style="text-align: center;">STACEY KOUMARAS</h1>
-
+        <a href="portfolio.html">portfolio</a>
+        <a href="contact.html">contact</a>
     </header>
 
     <div class="container">
